# ai-submodule

./: .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  Makefile  README.md  config.yaml  init.sh  instructions.md  project.yaml  reasoned-instruction.md
.githooks/: merge-instructions.py  pre-commit
.github/: copilot-instructions.md
.plans/: 5-agile-coach-persona.md  claude-md-init-remaining.md  coder-personas-plan.md  dark-factory-governance.md
commands/: ai-governance-panel.md  api-panel.md  architecture-panel.md  code-review-panel.md  compliance-panel.md  documentation-panel.md  incident-post-mortem-panel.md  index.md  launch-readiness-panel.md  migration-panel.md  panels.md  performance-panel.md  security-panel.md  technical-debt-panel.md  testing-panel.md  threat-panel.md
docs/: artifact-classification.md  autonomy-metrics.md  ci-gating-blueprint.md  context-management.md  dark-factory-governance-model.md  migration-summary.md  naming-review.md  runtime-feedback-architecture.md
mcp/: README.md  business_apps.json  mcp-install  mcp-install.ps1  vscode.json
mcp/servers/panorama-mcp/: .gitignore  README.md  allinone.py  fresh_login.py  inspect_structure.py  install.md  install.ps1  install.sh  interactive.py  pyproject.toml  test_login.py  test_panorama.py  test_tools.py  validate.py
mcp/servers/panorama-mcp/panorama_mcp/: __init__.py  browser.py  scraper.py  server.py
mcp/servicenow-mcp/: README.md  install.sh  pyproject.toml
mcp/servicenow-mcp/servicenow_mcp/: __init__.py  scraper.py  server.py
mcp/servicenow-mcp/servicenow_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
panels/: copilot-review.md
personas/: index.md  (+3 more)
(+199 files in other folders)
