[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servicenow-mcp"
version = "0.1.0"
description = "ServiceNow MCP server using web scraping"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
]

[project.scripts]
servicenow-mcp = "servicenow_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
